# LexAI

./: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  start.sh  vitest.config.ts
.claude/: launch.json
app/: globals.css  layout.tsx
app/cases/: new-case-form.tsx  page.tsx
app/chat/: page.tsx
app/clients/: page.tsx
app/dashboard/: page.tsx
app/documents/: filters.tsx  page.tsx  reprocess-button.tsx  upload-form.tsx
app/login/: actions.ts  page.tsx
app/review/: page.tsx
app/search/: page.tsx  search-client.tsx
backend/: requirements-dev.txt  requirements.txt
backend/app/: ai.py  chunking.py  convert.py  db.py  deps.py  embeddings.py  indexer.py  ingest.py  main.py  pipeline.py  store.py  vectors.py
backend/migrations/: 001_initial.sql  002_reset_to_lexai_schema.sql
components/: nav-server.tsx  nav.tsx
frontend/: package-lock.json  package.json
supabase/: config.toml
workers/: .env.example  README.md  celery_app.py  config.py  dispatcher.py  embed_server.py  pyproject.toml  supabase_client.py
workers/chunking/: chunker.py  embeddings.py
workers/extractors/: __init__.py  common.py  docx_extractor.py  eml_extractor.py  msg_extractor.py  pdf_extractor.py  xlsx_extractor.py
workers/jobs/: chunk_document.py  process_document.py
workers/tests/: test_chunker.py  test_common.py  test_docx_extractor.py  test_embeddings.py  test_eml_extractor.py  test_msg_extractor.py  test_pdf_extractor.py  test_xlsx_extractor.py
workers/tests/fixtures/: sample.docx  sample.eml  sample.msg  sample.xlsx
(+107 files in other folders)
